kubernetes/infrastructure/nginx-proxy-manager/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-proxy-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-proxy-manager
  template:
    metadata:
      labels:
        app: nginx-proxy-manager
    spec:
      containers:
        - name: nginx-proxy-manager
          image: jc21/nginx-proxy-manager:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 81
            - containerPort: 80
            - containerPort: 443
          volumeMounts:
            - name: data-volume
              mountPath: /data
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: nginx-proxy-manager-data-pvc
