kubernetes/infrastructure/nginx-proxy-manager/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-proxy-manager
spec:
  selector:
    app: nginx-proxy-manager
  ports:
    - name: ui
      protocol: TCP
      port: 81
      targetPort: 81
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
