kubernetes/infrastructure/nginx-proxy-manager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-proxy-manager
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - nginx.example.com
      secretName: nginx-proxy-manager-tls-secret
  rules:
    - host: nginx.example.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: nginx-proxy-manager
                port:
                  number: 81
